# sync.dataroot.ca

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-release.yml  test.yml
migrations/: U1__create_event_table.sql  U2__create_category_table.sql  U3__create_group_table.sql  U4__create_organizer_table.sql  U5__create_state_table.sql  V10__create_group_social_table.sql  V11__create_group_similiar_table.sql  V12__create_group_member_table.sql  V13__create_speaker_table.sql  V14__create_event_speaker_table.sql  V6__create_article_table.sql  V7__create_city_table.sql  V8__create_event_category_table.sql
migrations/2023-06-28-003820_event/: up.sql
migrations/2023-06-28-003825_group/: up.sql
src/: main copy.rs  main.rs
src/api/: lib.rs  mod.rs
src/api/services/: article_sync.rs  event_sync.rs  group_sync.rs  mod.rs
src/api/utils/: mod.rs
src/domain/: error.rs  mod.rs
src/domain/article/: adapter.rs  model.rs  repository.rs
src/domain/article/resources/: create.rs  delete_by_articleid.rs  find.rs  find_by_articleid.rs  mod.rs  update_by_articleid.rs
src/domain/category/: adapter.rs  mod.rs  repository.rs
src/domain/category/resources/: create.rs  find.rs  find_by_articleid.rs  find_by_extid.rs  insert_many.rs  update_by_extid.rs  update_many_by_extid.rs
src/domain/city/: model.rs  repository.rs
src/domain/city/resources/: create.rs  find.rs  (+5 more)
src/domain/diff_article/: model.rs  repository.rs
src/domain/diff_event/: model.rs  repository.rs
src/domain/diff_group/: model.rs  repository.rs
src/domain/event/: adapter.rs  model.rs  repository.rs
src/domain/event_category/: adapter.rs  repository.rs
src/domain/event_organizer/: model.rs
src/domain/group/: adapter.rs  mod.rs  model.rs  repository.rs
src/domain/registered_author/: model.rs  repository.rs
src/domain/registered_group/: model.rs  repository.rs
src/domain/state/: mod.rs  model.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/adapter/: medium_article.rs  meetup_event.rs  meetup_group.rs  mod.rs
src/infrastructure/repository/: mod.rs
sync_migrations/: V10__create_init_tables.sql
(+55 files in other folders)
