[package]
name = "apidatarotoca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target-dir = "/home/user/build-artifacts"
[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json","blocking"] } # reqwest with JSON parsing support
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
postgres = {version = "0.17.3" , features = ["with-serde_json-1"] }
serde_json = "1.0.56"
chrono = { version = "0.4", features = ["unstable-locales"] }


