[package]
name = "apidatarotoca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target-dir = "/home/user/build-artifacts"
[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json","blocking"] } # reqwest with JSON parsing support
dotenv = "0.15.0"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1", features = ["rt"] }
async-std = {version = "1.12.0", features = ["attributes"]}
async-trait = "0.1.68"
tokio-postgres = { version = "0.7.8", features = [
    "with-chrono-0_4",  
    "with-uuid-1",
] }
rand = "0.8.4"
sha2 = "0.9"
rand_pcg = "0.3.1"
tokio-postgres-rustls = "0.10.0"
thiserror = "1.0.40"
pem = "2.0.1"
rustls = "0.21.1"
deadpool-postgres = "0.10.5"
refinery = { version = "0.8", features = ["tokio-postgres","rusqlite"] }
serde = { version = "1.0", features = ["derive"] }
postgres = {version = "0.17.3" , features = ["with-serde_json-1"] }
serde_json = "1.0.56"
serde-xml-rs = "0.5"
chrono = { version = "0.4", features = ["unstable-locales"] }
regex = "1.3.1"
url = "2.2.2"
urlencoding = "1.0.1"

quick-xml = "0.29.0"

[dev-dependencies]
mockall = "0.11.3"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "sync"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "s"
